make drawer width static when expanded to fix it from covering view, but keep it dynamic when modal

--- a/src/css/ha-drawer.css
+++ b/src/css/ha-drawer.css
@@ -1,19 +1,24 @@
 /* Remove border, fix border radius, make width dynamic, add transition */
 .mdc-drawer {
 	border-width: 0;
-	min-width: var(--mdc-drawer-width);
-	max-width: 360px;
-	width: fit-content;
+	width: calc(var(--mdc-drawer-width) + var(--transition-buffer));
 	transition: all var(--md-sys-motion-expressive-spatial-fast);
-	padding-left: 64px;
-	translate: -64px 0;
+	padding-left: var(--transition-buffer);
+	translate: calc(-1 * var(--transition-buffer)) 0;
+
+	--transition-buffer: 64px;
 }
 
 /* Fix non-modal border radius */
 .mdc-drawer {
 	border-radius: 0;
 }
+
+/* Add border radius and variable width to modal */
 .mdc-drawer--modal {
 	border-top-right-radius: var(--mdc-shape-large);
 	border-bottom-right-radius: var(--mdc-shape-large);
+	min-width: 220px;
+	width: fit-content;
+	max-width: 360px;
 }
